[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/btree/Editor/TreeEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/btree/Editor/Create.gd" type="Script" id=2]
[ext_resource path="res://addons/btree/Editor/tree_root/root.tscn" type="PackedScene" id=3]

[node name="TreeEditor" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
snap_distance = 10
zoom = 0.578704
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="group" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 12.0
margin_right = -12.0
margin_bottom = 20.0
alignment = 2

[node name="Create" type="MenuButton" parent="group"]
margin_left = 472.0
margin_right = 525.0
margin_bottom = 20.0
text = "Create"
items = [ "Task", null, 0, false, false, -1, 0, null, "", false, "Selector", null, 0, false, false, -1, 0, null, "", false, "Sequence", null, 0, false, false, -1, 0, null, "", false, "Priority Selector", null, 0, false, false, -1, 0, null, "", false, "Priority Condition", null, 0, false, false, -1, 0, null, "", false, "Paralel", null, 0, false, false, -1, 0, null, "", false, "Mute", null, 0, false, false, -1, 0, null, "", false, "Repeat", null, 0, false, false, -1, 0, null, "", false, "While Node", null, 0, false, false, -1, 0, null, "", false, "Wait Node", null, 0, false, false, -1, 0, null, "", false, "Race Node", null, 0, false, false, -1, 0, null, "", false, "Random Selector", null, 0, false, false, -1, 0, null, "", false, "Random Sequence", null, 0, false, false, -1, 0, null, "", false ]
script = ExtResource( 2 )

[node name="save" type="Button" parent="group"]
margin_left = 529.0
margin_right = 570.0
margin_bottom = 20.0
text = "Save"

[node name="help" type="Button" parent="group"]
margin_left = 574.0
margin_right = 616.0
margin_bottom = 20.0
toggle_mode = true
text = "Help"

[node name="root" parent="." instance=ExtResource( 3 )]
margin_bottom = 82.0006
rect_scale = Vector2( 0.578704, 0.578704 )
mouse_filter = 1
title = "root"

[node name="search" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -37.0
margin_right = -15.0
margin_bottom = -13.0
alignment = 2

[node name="Label" type="Label" parent="search"]
margin_left = 169.0
margin_top = 5.0
margin_right = 261.0
margin_bottom = 19.0
text = "Search Node : "

[node name="search_bar" type="LineEdit" parent="search"]
margin_left = 265.0
margin_right = 465.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
[connection signal="connection_request" from="." to="." method="connection_request"]
[connection signal="disconnection_request" from="." to="." method="disconnection_request"]
[connection signal="node_selected" from="." to="." method="node_selected"]
[connection signal="popup_request" from="." to="." method="popup_request"]
[connection signal="pressed" from="group/save" to="." method="_on_save_pressed"]
[connection signal="toggled" from="group/help" to="." method="_on_help_toggled"]
[connection signal="text_changed" from="search/search_bar" to="." method="_on_search_bar_text_changed"]
